syntax = "proto3";

option go_package = "./pb";


message CheckStatusRequest {}
message CheckStatusResponse {
    int64 Code = 1;
}
service CheckStatusService {
    rpc CheckStatus (CheckStatusRequest) returns (CheckStatusResponse) {};
}

message CalculateRequest {
    int64 Num1 = 1;
    int64 Num2 = 2;
    string Operator = 3;
}
message CalculateResponse {
    int64 Num1 = 1;
    int64 Num2 = 2;
    string Operator = 3;
    int64 Result = 4;
}
service CalculateService {
    rpc Calculate (CalculateRequest) returns (CalculateResponse) {};
}